--- a/chrome/_browser.css
+++ b/chrome/_browser.css
@@ -16,7 +16,7 @@
   padding-right: 6px !important;
 }
 
-#navigator-toolbox :-moz-any(.toolbarbutton-1, .bookmark-item)
+#navigator-toolbox :-moz-any(.toolbarbutton-1, .bookmark-item, .scrollbutton-up, .scrollbutton-down)
 {
   max-height: 32px !important;
   
@@ -49,17 +49,17 @@
   background-clip: padding-box !important;
 }
 
-#navigator-toolbox :-moz-any(.toolbarbutton-1, .bookmark-item)[disabled]
+#navigator-toolbox :-moz-any(.toolbarbutton-1, .bookmark-item, .scrollbutton-up, .scrollbutton-down)[disabled]
 {
   opacity: .42 !important;
 }
 
-#navigator-toolbox :-moz-any(.toolbarbutton-1, .bookmark-item):hover:not([disabled])
+#navigator-toolbox :-moz-any(.toolbarbutton-1, .bookmark-item, .scrollbutton-up, .scrollbutton-down):hover:not([disabled])
 {
   background-color: var(--toolbarbutton-background-color-hover) !important;
 }
 
-#navigator-toolbox :-moz-any(.toolbarbutton-1, .bookmark-item):-moz-any(:hover:active, [checked], [open]):not([disabled])
+#navigator-toolbox :-moz-any(.toolbarbutton-1, .bookmark-item, .scrollbutton-up, .scrollbutton-down):-moz-any(:hover:active, [checked], [open]):not([disabled])
 {
   fill-opacity: .16 !important;
   background-size: 100% !important;
@@ -147,7 +147,7 @@
   margin: 1px !important;
   padding: 2px !important;
   background-clip: padding-box !important;
-  min-height: 24px !important;
+  min-height: 28px !important;
   position: relative !important;
   overflow: visible !important;
 }
@@ -190,7 +190,9 @@
 {
   min-width: 32px !important;
   height: 24px !important;
-  padding: 4px !important;
+  padding: 4px 8px !important;
+  border-radius: 99px !important;
+  fill-opacity: 1 !important;
 }
 
 #star-button
@@ -261,10 +263,12 @@
   color: var(--chrome-toolbar-color) !important;
 }
 
-.scrollbutton-down,
-.scrollbutton-up,
 .arrowscrollbox-overflow-start-indicator,
-.arrowscrollbox-overflow-end-indicator,
+.arrowscrollbox-overflow-end-indicator
+{
+  visibility: hidden !important;
+}
+
 #alltabs-button
 {
   display: none !important;
@@ -356,10 +360,6 @@
   transition: none !important;
 }
 
-.tabbrowser-tab[pinned]
-{
-  max-width: 36px !important;
-}
 
 .tabbrowser-tab[pinned] .tab-content
 {
